css/style.css
/* General resets */

*, *::before, *::after {
  box-sizing: border-box;
}

* {
  margin: 0;
}

:root {
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
  --user-font-scale: .9rem - 16px;
  font-size: clamp(0.6rem, 0.4626rem + 1.0309vw + var(--user-font-scale), .85rem);
  --text-light: #d0d1c7;
  --text-dark: #1e1e1e;
  --bg-light: #eaebe3;
  --bg-dark: #1f2738;
}

html, body {
  height: 100%;
  width: 100%;
}

body {
  line-height: 1.5;
  background: var(--bg-light);
  color: var(--text-dark);
}

#content {
  display: grid;
  justify-content: center;
  padding: 2rem clamp(3rem, 1rem, 5rem);
}

@media (prefers-color-scheme: dark) {
  body {
    background: var(--bg-dark);
    color: var(--text-light);
  }
}

img, picture, video, canvas, svg {
  display: block;
  max-width: 100%;
}

ul {
  margin-block-start: 0;
  margin-block-end: 0;
  padding-inline-start: 0;
}

input, button, textarea, select {
  font: inherit;
}

/* Typography */

a {
  color: inherit;
}

p, h1, h2, h3, h4, h5, h6 {
  overflow-wrap: break-word;
}

h1 {
  font-size: 2.25em;
  font-weight: 800;
  line-height: 1.11;
}

h2 {
  font-weight: 500;
}

.navigation {
  display: flex;
  padding: .8rem;
}

.navigation a {
  display: flex;
  height: fit-content;
  flex-direction: row;
  text-decoration: none;
  width: 100%;
}

.navigation a span {
  font-size: 1em;
  font-weight: 500;
  margin-left: .5rem;
}

.navigation a img {
  height: 1.4rem;
  width: 1.4rem;
}

.navigation nav {
  display: flex;
  list-style: none;
}

.navigation nav span {
  color: var(--text-light);
  padding: 0 0.3rem;
}

@media (prefers-color-scheme: dark) {
  .navigation nav span {
    color: var(--text-dark);
  }
}

#content header #post-meta {
  font-size: .75rem;
  font-weight: 500;
  letter-spacing: .025em;
  line-height: 1rem;
  text-transform: uppercase;
  padding-top: .6em;
}

#content header {
  padding-bottom: 1.3rem;
}

footer a {
  text-decoration: none;
}

svg {
  height: 1.25rem;
  width:  1.25rem;
}

pre {
  border-radius: 0.375rem;
  font-size: .875em;
  line-height: 1.7;
  overflow-x: auto;
  padding: 0.8rem 1.1rem;
}

/* Homepage */

#home-wrapper {
  display: grid;
  gap: clamp(1rem, 4rem, 10rem);
}

#welcome-message {
  grid-column: 1;
}

#welcome-message p {
  padding-bottom: 1rem;
  max-width: 20rem;
}

#recent-updates {
  grid-column: 2;
  text-align: center;
}

#recent-updates #cover {
  border-radius: 5px;
  margin: .3rem auto;
  width: 15rem;
  height: auto;
}

#recent-updates #post-stream {
  margin-top: 1rem;
}

#home-wrapper hr {
  border-style: solid;
  margin: 1.2rem auto;
  width: 10rem;
}

#post-stream li {
  list-style: none;
  text-align: center;
}

/* Posts */
article:not(.full) {
  margin: 0 auto;
  max-width: 60ch;
}

article .hidden { /* TODO: Change this to rss-only */
  display: none;
}

article #post-body p,
article #post-body img,
article #post-body #heading,
article #post-body pre,
article blockquote {
  margin-bottom: 1.5rem;
}

article #post-body img {
  border-radius: 3px;
}

article .heading-2 {
  margin-left: -2rem;
}

article .heading-3 {
  margin-left: -2.6rem;
}

article .heading-4 {
  margin-left: -3.2rem;
}

article .heading a {
  font-size: 1rem;
  opacity: 0;
  padding-right: 0.8rem;
  text-decoration: none;
  vertical-align: middle;
}

article .heading:hover a {
  opacity: 1;
  transition-duration: .5s;
}

article .heading h2,
article .heading h3,
article .heading h4,
article .heading h5,
article .heading h6 {
  display: inline-block;
  vertical-align: middle;
  margin-bottom: .25em;
}

article .highlight {
  margin-bottom: 1.3rem;
}

article p code {
  background-color: var(--bg-dark);
  color: var(--text-light);
  font-family: inherit;
  font-size: .75rem;
  font-weight: 500;
  letter-spacing: .025em;
  line-height: 1rem;
  padding: 0.2rem 0.3rem;
  white-space: nowrap;
}

@media (prefers-color-scheme: dark) {
  article p code {
    background-color: var(--bg-light);
    color: var(--text-dark);
  }
}

/* Blockquotes */
#post-body blockquote > p:last-child {
  margin-bottom: 0;
}

blockquote {
  border-left: 4px solid var(--text-light);
  padding-left: 1em;
  border-radius: 5px;
}

/* Notices */
.notice {
  background-color: var(--text-light);
  border-radius: 0.5rem;
  display: flex;
  flex-direction: column;
  line-height: 1.6;
  margin-bottom: 1.3rem;
  padding: 1rem 1.6rem;
}

.notice span {
  padding-right: .5rem;
}

article #post-body .notice h2,
article #post-body .notice h3,
article #post-body .notice p {
  margin-bottom: .5rem;
}

@media (prefers-color-scheme: dark) {
  .notice {
    background-color: var(--text-dark);
  }
}

video {
  border-radius: 5px;
  margin: 0 auto 1em !important;
}

/* Lists */
ol, ul {
  padding-inline-start: 0;
}

main ol, main ul, #post-body ul, #post-body > ol {
  list-style: none;
  margin-top: .75em;
  padding-inline-start: 0;
}

main ul > li, main ol > li, #post-body ul > li, #post-body > ol > li {
  position: relative;
  padding-left: 1.75em;
  margin-bottom: 0.5em;
}

main ul > li:before, main ol > li:before,
#post-body ul > li:before, #post-body > ol > li:before {
  content: "";
  position: absolute;
  background-color: #23262b;
  width: .375em;
  height: .375em;
  border-radius: 50%;
  top: .6875em;
  left: .25em;
}

@media (prefers-color-scheme: dark) {
  main ul > li:before, main ol > li:before,
  #post-body ul > li:before, #post-body > ol > li:before {
    background-color: #d1d5db;
  }
}

main ul > h2, main ol > h2,
#post-body ul > h2, #post-body > ol > h2 {
  font-weight: 700;
  font-size: 1.5em;
  margin-top: 1em;
  margin-bottom: 1em;
}

li > time {
  text-transform: uppercase;
  font-size: .8em;
  font-weight: 700;
  padding-left: 3px;
}

li > span {
  font-size: .7em;
  font-weight: 600;
}

details {
  margin-bottom: 1em;
  padding-bottom: .5em;
}

/* Code blocks, table and images get extra width */
/* TODO: Don't use important, this is dumb but temporary while I do a migration */
table, .highlight, pre[class*=language-], figure, #post-body img {
  width: 120% !important;
  margin-left: -10% !important;
}

#post-body img {
  height: auto;
  max-width: none;
}

article.full table {
  width: 100%;
  margin-left: 0;
  table-layout: fixed;
  word-break: break-word;
}


/* Tables */
table, thead, th, tr, td {
  border: 1px solid black;
  padding: .1em;
}

table {
  margin-bottom: 1em;
}

/* Questions */
form#search {
  margin-top: 1rem;
}

/* Grid lists */
#post-body .grid-list ul {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: repeat(3,minmax(40px,auto));
  grid-gap: 20px;
}

@media only screen and (min-width: 1000px) {
  #post-body .grid-list ul:not(.partial-list) {
    grid-template-columns: 1fr 1fr 1fr 1fr;
    grid-template-rows: repeat(4,minmax(40px,auto));
    margin-left: -25%;
    width: 150%;
  }
}

@media only screen and (min-width: 1200px) {
  #post-body .grid-list ul:not(.partial-list):not(.almost-full-list) {
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
    grid-template-rows: repeat(6,minmax(40px,auto));
    margin-left: -50%;
    width: 200%;
  }
}

#post-body > .grid-list ul > li {
  padding-left: 0;
}

#post-body > .grid-list ul > li:before {
  content: none;
}

/* Footnotes */
#post-body hr {
  height: 16px;
  width: 48px;
  background-image: url("/favicon.png");
  margin: 0 auto;
  border: 0px;
  margin-bottom: 4em;
  margin-top: 4em;
}

/* Footer */
footer {
  width: 75%;
  margin: 0 auto;
}

